--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
+    "lucide-react": "^0.556.0",
     "next": "16.0.7",
+    "pixi.js": "^8.14.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
