--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@pixi/filter-displacement": "^7.4.3",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.556.0",
