--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@pixi/filter-displacement": "^7.4.3",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "howler": "^2.2.4",
     "lucide-react": "^0.556.0",
