--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "16.0.7",
     "pixi.js": "^8.14.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
